Increased the page footer margin to stop the page number from wrapping onto multiple lines.

--- a/src/ui/loader.css
+++ b/src/ui/loader.css
@@ -24,10 +24,7 @@
   content: attr(customcounter) ' ' !important;
 }
 .pagedjs_margin-bottom {
-  grid-template-columns: minmax(12.66%, 1fr) minmax(33%, 93.3657%) minmax(
-      1px,
-      1fr
-    ) !important;
+  grid-template-columns: minmax(14.3%, 1fr) minmax(33%, 100%) minmax(1px, 1fr) !important;
   font-size: smaller !important;
 }
 .pagedjs_margin-bottom-center {
